<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".question1">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main_menu_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--        video-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <VideoView
                android:id="@+id/videoView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <!--        question-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            问题-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Q5"
                            android:textSize="30dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></LinearLayout>

            </LinearLayout>

            <!--            选项-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="224dp"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <RadioButton
                                android:id="@+id/radioButton1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/A5"
                                android:textSize="24sp"
                                tools:ignore="TouchTargetSizeCheck" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/B5"
                                android:textSize="24sp"
                                tools:ignore="TouchTargetSizeCheck" />

                            <RadioButton
                                android:id="@+id/radioButton3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/C5"

                                android:textSize="24sp"
                                tools:ignore="TouchTargetSizeCheck" />

                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></LinearLayout>

            </LinearLayout>

            <!--            按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <!--                <Button-->
                <!--                    android:id="@+id/btnReplay"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:onClick="btnReplay"-->

                <!--                    android:text="从头播放" />-->

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="back"
                    android:text="上一题" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="next"
                    android:text="下一题" />

            </LinearLayout>


            <!--            提交按钮 删-->
            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="60dp"-->
            <!--                android:orientation="horizontal">-->

            <!--                <Button-->
            <!--                    android:id="@+id/btnAdd"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:shadowColor="@android:color/holo_blue_light"-->
            <!--                    android:text="Button" />-->
            <!--            </LinearLayout>-->

            <!--            数据库相关 留-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/abandon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="作废此问题" />

                <TextView
                    android:id="@+id/export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="导出调查统计" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>